--- a/chart.html.erb
+++ b/chart.html.erb
@@ -1,137 +1,20 @@
-<!-- Render the Chart -->
 <div class='row'>
-  <div class='col-lg-6'>
-    <h2><%= chart_data[:title] %></h2>
-    <div class='chart_container' height="450">
-      <div width="800" height="450" class='chart'>
-        <canvas id="myChart<%= chart_data[:var_key] %>" width="800" height="450" class='content'></canvas>
+  <div class='col-lg-12'>
+    <div class="container">
+      <div class="row">
+        <h2><%= chart_data[:title] %></h2>
       </div>
-      <div width="800" height="450" class='overlay'>
-        <canvas id="myOverlay<%= chart_data[:var_key] %>" width="800" height="450"></canvas>
-      </div>
-      <div width="800" height="450" class='ticks'>
-        <canvas id="myTicks<%= chart_data[:var_key] %>" width="800" height="450"></canvas>
+      <div class="row">
+        <div class='chart'>
+          <canvas id="myChart<%= chart_data[:var_key] %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height] %>" class='content'></canvas>
+        </div>
+        <div class='overlay'>
+          <canvas id="myOverlay<%= chart_data[:var_key] %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height] %>"></canvas>
+        </div>
+        <div class='ticks'>
+          <canvas id="myTicks<%= chart_data[:var_key] %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height] %>"></canvas>
+        </div>
       </div>
     </div>
-    <script>
-        var ctx<%= chart_data[:var_key] %> = document.getElementById("myChart<%= chart_data[:var_key] %>").getContext("2d");
-        var overlayCtx<%= chart_data[:var_key] %> = document.getElementById("myOverlay<%= chart_data[:var_key] %>").getContext("2d");
-        var ticksCtx<%= chart_data[:var_key] %> = document.getElementById("myTicks<%= chart_data[:var_key] %>").getContext("2d");
-
-        // This is the actual data being plotted.
-        // The only relevant bits are the background colors and the data values
-        data<%= chart_data[:var_key] %> = {
-            datasets: [
-                {
-                    label: "Score",
-                    data: [<%= chart_data[:scores] %>],
-                    backgroundColor: ["#ffff00", "#00ffff", "#ff00ff", "#0000ff", "#ff0000",
-                        "#00ff00", "#F00099", "#f09900", "#99F000"
-                    ],
-                    borderColor: ["#000000", "#000000", "#000000", "#000000", "#000000",
-                        "#000000", "#000000", "#000000", "#000000"
-                    ]
-                }
-            ]
-        };
-        options<%= chart_data[:var_key] %> = {
-            scale: {
-                display: false
-            }
-        };
-
-
-        // This provides layer gives us the dividing border lines.
-        // The data values for this are all set to 1.0 and the background
-        // color is transparent so that the colors from the content layer
-        // can show through.
-        ///
-        // this layer is drawn last.
-        overlayData<%= chart_data[:var_key] %> = {
-            datasets: [
-                {
-                    label: "Score",
-                    data: [<%= chart_data[:ranges] %>],
-                    backgroundColor: [
-                        "rgba(255,0,0,0.0)",
-                        "rgba(255,0,0,0.0)",
-                        "rgba(255,0,0,0.0)",
-                        "rgba(255,0,0,0.0)",
-                        "rgba(255,0,0,0.0)",
-                        "rgba(255,0,0,0.0)",
-                        "rgba(255,0,0,0.0)",
-                        "rgba(255,0,0,0.0)",
-                        "rgba(255,0,0,0.0)"
-                    ],
-                    borderColor: [
-                        "#000000",
-                        "#000000",
-                        "#000000",
-                        "#000000",
-                        "#000000",
-                        "#000000",
-                        "#000000",
-                        "#000000",
-                        "#000000"
-                    ]
-                }
-            ]
-        };
-        overlayOptions<%= chart_data[:var_key] %> = {
-            scale: {
-                display: false
-            }
-        };
-
-
-        // This layer provides the tick marks, it's drawn between the content and
-        // the overlay.  The data values are all set to zero so that we get tick
-        // marks all the way to the center, even where there's data
-        //
-        ticksData<%= chart_data[:var_key] %> = {
-            datasets: [
-                {
-                    label: "Score",
-                    data: [<%= chart_data[:ticks] %>],
-                }
-            ]
-        };
-        ticksOptions<%= chart_data[:var_key] %> = {
-            scale: {
-                display: true,
-
-                ticks: {
-                    beginAtZero: true,
-                    max: 1,
-                    callback: function (value, index, values) {
-                        return "";
-                    }
-                }
-            }
-        };
-
-        new Chart(ctx<%= chart_data[:var_key] %>, {
-            data: data<%= chart_data[:var_key] %>,
-            type: "polarArea",
-            options: options<%= chart_data[:var_key] %>
-        });
-
-        new Chart(overlayCtx<%= chart_data[:var_key] %>, {
-            data: overlayData<%= chart_data[:var_key] %>,
-            type: "polarArea",
-            options: overlayOptions<%= chart_data[:var_key] %>
-        });
-
-        new Chart(ticksCtx<%= chart_data[:var_key] %>, {
-            data: ticksData<%= chart_data[:var_key] %>,
-            type: "polarArea",
-            options: ticksOptions<%= chart_data[:var_key] %>
-        });
-
-    </script>
   </div>
-</div>
-<div class='row'>
-  <br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
