Make the templates a little more sane

--- a/script.html.erb
+++ b/script.html.erb
@@ -26,7 +26,7 @@
             display: false
         },
         legend: {
-            display: false
+            position: 'right'
         },
         tooltips: {
             callbacks: {
@@ -112,7 +112,6 @@
     ticksOptions<%= chart_data[:var_key] %> = {
         scale: {
             display: true,
-
             ticks: {
                 beginAtZero: true,
                 max: 1,
