--- a/chart.html.erb
+++ b/chart.html.erb
@@ -6,13 +6,16 @@
       </div>
       <div class="row">
         <div class='chart'>
-          <canvas id="myChart<%= chart_data[:var_key] %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height] %>" class='content'></canvas>
+          <canvas id="myChart<%= chart_data[:var_key] %>" width="<%= chart_data[:width]%>" height="<%= chart_data[:height] %>" class='content'></canvas>
         </div>
         <div class='overlay'>
           <canvas id="myOverlay<%= chart_data[:var_key] %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height] %>"></canvas>
         </div>
+        <div class='legend'>
+          <canvas id="legend<%= chart_data[:var_key] %>" width="<%= chart_data[:width]%>" height="<%= chart_data[:height] %>"></canvas>
+        </div>
         <div class='ticks'>
-          <canvas id="myTicks<%= chart_data[:var_key] %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height] %>"></canvas>
+          <canvas id="myTicks<%= chart_data[:var_key]  %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height]%>"></canvas>
         </div>
       </div>
     </div>
