--- a/polar.css
+++ b/polar.css
@@ -4,12 +4,14 @@ div.chart_container {
 
 div.overlay {
     position: absolute;
+    margin-top: 60px;
     left: 50px;
-    z-index: 2;
+    z-index: 3;
 }
 
 div.chart {
     position: absolute;
+    margin-top: 60px;
     z-index: 0;
     left: 50px;
     background-color: rgba(255, 255, 255, 0);
@@ -17,14 +19,22 @@ div.chart {
 
 div.ticks {
     position: absolute;
+    margin-top: 60px;
     left: 50px;
     z-index: 1;
     background-color: rgba(255, 255, 255, 0);
 }
 
+div.legend {
+    position: absolute;
+    left: 50px;
+    z-index: 4;
+    background-color: rgba(255, 255, 255, 0);
+}
+
 div.category_row {
-    margin-top: 500px;
+    margin-top: 600px;
 }
 div.sub_category_row {
-    margin-top: 500px;
+    margin-top: 600px;
 }
