--- a/chart.html.erb
+++ b/chart.html.erb
@@ -2,7 +2,7 @@
   <div class='col-lg-12'>
     <div class="container">
       <div class="row">
-        <h2><%= chart_data[:title] %></h2>
+        <h2><%= chart_data[:display_title] || chart_data[:title] %></h2>
       </div>
       <div class="row">
         <div class='chart'>
