--- a/chart.html.erb
+++ b/chart.html.erb
@@ -1,8 +1,11 @@
+<nav aria-label="breadcrumb">
+  <span class="breadcrumb-item"><%= chart_data[:display_title] || chart_data[:title] %></span>
+</nav>
 <div class='row'>
   <div class='col-lg-12'>
     <div class="container">
       <div class="row">
-        <h2><%= chart_data[:display_title] || chart_data[:title] %></h2>
+        <h3></h3>
       </div>
       <div class="row">
         <div class='chart'>
