--- a/chart.html.erb
+++ b/chart.html.erb
@@ -1,23 +1,19 @@
-<nav aria-label="breadcrumb">
-  <span class="breadcrumb-item"><%= chart_data[:display_title] || chart_data[:title] %></span>
-</nav>
-<div class='row'>
+
+<div class="container">
+<div class='row chart_row'>
   <div class='col-lg-12'>
-    <div class="container">
-       <div class="row">
-        <div class='chart'>
-          <canvas id="myChart<%= chart_data[:var_key] %>" width="<%= chart_data[:width]%>" height="<%= chart_data[:height] %>"></canvas>
-        </div>
-        <div class='overlay'>
-          <canvas id="myOverlay<%= chart_data[:var_key] %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height] %>"></canvas>
-        </div>
-        <div class='legend'>
-          <canvas id="legend<%= chart_data[:var_key] %>" width="<%= chart_data[:width]%>" height="<%= chart_data[:height] %>"></canvas>
-        </div>
-        <div class='ticks'>
-          <canvas id="myTicks<%= chart_data[:var_key]  %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height]%>"></canvas>
-        </div>
-      </div>
+    <div class='chart'>
+      <canvas id="myChart<%= chart_data[:var_key] %>" width="<%= chart_data[:width]%>" height="<%= chart_data[:height] %>"></canvas>
+    </div>
+    <div class='overlay'>
+      <canvas id="myOverlay<%= chart_data[:var_key] %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height] %>"></canvas>
+    </div>
+    <div class='legend'>
+      <canvas id="legend<%= chart_data[:var_key] %>" width="<%= chart_data[:width]%>" height="<%= chart_data[:height] %>"></canvas>
+    </div>
+    <div class='ticks'>
+      <canvas id="myTicks<%= chart_data[:var_key]  %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height]%>"></canvas>
     </div>
   </div>
+</div>
 </div>
