--- a/script.html.erb
+++ b/script.html.erb
@@ -72,7 +72,11 @@
             display: false
         },
         legend: {
-            position: 'top'
+            position: 'top',
+            labels : {
+                fontSize: 14,
+                fontFamily: "'muli', 'Myriad Pro', Helvetica, Arial, sans-serif"
+            }
         },
         tooltips: {
             callbacks: {
