Adjust legend layer for better readability

--- a/chart.html.erb
+++ b/chart.html.erb
@@ -9,7 +9,7 @@
       <canvas id="myOverlay<%= chart_data[:var_key] %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height] %>"></canvas>
     </div>
     <div class='legend'>
-      <canvas id="legend<%= chart_data[:var_key] %>" width="<%= chart_data[:width]%>" height="<%= chart_data[:height] %>"></canvas>
+      <canvas id="legend<%= chart_data[:var_key] %>" width="<%= chart_data[:width] + 100%>" height="<%= chart_data[:height] %>"></canvas>
     </div>
     <div class='ticks'>
       <canvas id="myTicks<%= chart_data[:var_key]  %>" width="<%= chart_data[:width] %>" height="<%= chart_data[:height]%>"></canvas>
