--- a/index.html.erb
+++ b/index.html.erb
@@ -57,7 +57,10 @@
           <input class="form-check-input" type="checkbox" id="display_copyright" name="display_copyright" checked>
           <label class="form-check-label" for="display_copyright">Show Copyright?</label>
         </div>
-
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="display_scoregrid" name="display_scoregrid" checked>
+          <label class="form-check-label" for="display_scoregrid">Show Grid w/Scores?</label>
+        </div>
       </div>
 
       <div class="form-group row">
@@ -119,6 +122,7 @@
             <% end %>
             <option>Custom</option>
           </select>
+          *Please select a palette that has more colors than you have high level dimensions.
         </div>
       </div>
       <div class="form-group row" id="custom_colors_row" style="display: none;">
@@ -136,8 +140,8 @@
         </div>
         <div class="col-sm-4">
           <select class="form-control" id="color_mode" name="color_mode">
-            <option value="linear">Normal</option>
             <option value="gradient">Categories</option>
+            <option value="linear">Normal</option>
             <option value="score">Score</option>
           </select>
         </div>
